--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <title>1488
-  </title>
+  <title>Free Download By Parad1st</title>
   <meta property="og:title" content="Free Download">
   <meta property="og:site_name" content="Free Download">
   <meta property="og:image" content="images/Parad1st.png">
@@ -151,7 +150,7 @@
 </div>
 
 <div class="scare">
-  <video id="video" class="video" src="media/video.mp4" loop autoplay playsinline muted></video>
+  <video id="video" class="video" src="media/video.mp4" loop autoplay playsinline></video>
 </div>
 
 <script type="text/javascript">
